--- a/dlfc-agent-datacenter/src/main/resources/application.yml
+++ b/dlfc-agent-datacenter/src/main/resources/application.yml
@@ -7,5 +7,5 @@ spring:
     username: rep1
     password: mysql
 mybatis:
-  config-location: classpath:mybatisConfig/mybatis-config.xml
+  config-location: classpath:mybatis-config.xml
   mapperLocations: classpath:mappings/*.xml
