--- a/dlfc-user-datacenter/src/main/resources/application.yml
+++ b/dlfc-user-datacenter/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dlfc_155
+    url: jdbc:mysql://10.32.156.86:3306/dlfc_155
     username: root
     password: root
   application:
