数据中心接口

--- a/dlfc-agent-datacenter/src/main/resources/application.yml
+++ b/dlfc-agent-datacenter/src/main/resources/application.yml
@@ -3,9 +3,13 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://10.32.156.86:3306/dlfc_155
+    url: jdbc:mysql://10.32.156.86:3306/dlfc_155?useUnicode=true&characterEncoding=utf-8
     username: root
     password: root
 mybatis:
   config-location: classpath:mybatis-config.xml
   mapperLocations: classpath:mappings/*.xml
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server-2:11112/eureka,http://eureka-server-3:11113/eureka
